tests/paczka2/big_fuzzy/46041164.err
Error in line 2: S171 A588 -1,5
Error in line 3: YoMRz6ZRRR A518 73,4
Error in line 4: YoMRz6ZRRR A588 71,4
Error in line 8: HRd3AFD A518 87,9
Error in line 14: 0CKhCyOaC A518 69,7
Error in line 24: 0CKhCyOaC S171 47,0
Error in line 28: ObYeyoDDz S171 14,2
Error in line 1: S171 A588 50,7
Error in line 33: ObYeyoDDz A588 45,3
Error in line 34: S171 S171 21,4
Error in line 57: 0CKhCyOaC A715 66,3
Error in line 69: YoMRz6ZRRR A518 65,1
Error in line 78: ObYeyoDDz S171 41,9
Error in line 80: ObYeyoDDz A5 61,1
Error in line 82: ObYeyoDDz A715 38,7
Error in line 110: ObYeyoDDz A588 42,6
Error in line 119: ObYeyoDDz S171 54,8
Error in line 122: YoMRz6ZRRR A518 75,3
Error in line 135: 0CKhCyOaC S171 -1,4
Error in line 143: 5rYX A518 295,61
Error in line 152: YoMRz6ZRRR A518 89,3
Error in line 162: S171 A588 10,8
Error in line 164: S171 S171 32,4
Error in line 160: 0CKhCyOaC A715 68,4
Error in line 166: 0CKhCyOaC S171 48,9
Error in line 145: ObYeyoDDz A518 69,6
Error in line 163: POhfhm S171 85,1
Error in line 182: POhfhm A518 0,1
Error in line 133: 5rYX A518 74,9
Error in line 190: S171 A518 45,92
Error in line 186: 5rYX A588 62,4
Error in line 191: 5rYX A518 40,9
Error in line 204: HRd3AFD A588 66,0
Error in line 205: HRd3AFD A518 56,3
Error in line 180: S171 A715 112,3
Error in line 203: ObYeyoDDz S171 95,3
Error in line 208: S171 A518 97,2
Error in line 209: POhfhm S171 38,7
Error in line 226: YoMRz6ZRRR S171 94,9
Error in line 238: ObYeyoDDz A518 6,0
Error in line 240: ObYeyoDDz A588 27,4
Error in line 233: 0CKhCyOaC A518 78,0
